# Polkadot-Cloud-Hack

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DEMO_SCRIPT.md  DEVPOST_SUBMISSION.md  Dockerfile  HOW_TO_USE.md  LICENSE  Makefile  PITCH.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  docker-compose.yml  readme.md  reputation_pallet.rs  test_integration.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: Analytics.tsx  App.tsx  Dashboard.tsx  Leaderboard.tsx  api.ts
node/: Cargo.toml  main.rs
node/src/: main.rs
runtime/: Cargo.toml  lib.rs
runtime/src/: lib.rs
scripts/: deploy.sh
